Working example of multiple major versions, but with 1 config file and versions in path, not a separate config file for each version.
