# observatory-platform/observatory/platform/api/app/elastic.py
@@ -1,3 +1,19 @@
+# Copyright 2020 Curtin University
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#   http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+# Author: Aniek Roelofs
+
 """
 example queries:
 http://0.0.0.0:5000/query?agg=institution&subset=journals&from=2018-01-15&to=2019-01-01&journal=Molecular
@@ -270,7 +286,7 @@ def parse_args() -> Tuple[str, str, str, str, dict, int, str]:
     return alias, index_date, from_date, to_date, filter_fields, size, scroll_id
 
 
-def search():
+def searchv1():
     start = time.time()
 
     alias, index_date, from_date, to_date, filter_fields, size, scroll_id = parse_args()
@@ -308,6 +324,7 @@ def search():
     print(end - start)
     schema = create_schema()
     results = {
+        'version': 'v1',
         'index': index,
         'scroll_id': scroll_id,
         'returned_hits': len(results_data),
@@ -315,4 +332,10 @@ def search():
         'schema': schema,
         'results': results_data
     }
+    return results
+
+
+def searchv2():
+    results = searchv1()
+    results['version'] = 'v2'
     return results
