# observatory-platform/observatory/platform/api/app/openapi.yml
@@ -1,12 +1,128 @@
 swagger: '2.0'
 info:
-  title: Elasticsearch API
-  description: 'Query data from elasticsearch indexes'
-  version: 0.1.9
+  title: Observatory API
+  description: 'Observatory API'
+  version: 1.0.0
 paths:
-  /query:
+  /v1/query:
     get:
-      operationId: elastic.search
+      operationId: elastic.searchv1
+      tags:
+        - Query
+      summary: Perform an elasticsearch search query
+      description: Perform an elasticsearch search query
+      parameters:
+        - in: query
+          name: agg
+          description: The aggregation level
+          required: true
+          enum:
+            - author
+            - country
+            - funder
+            - group
+            - institution
+            - publisher
+          type: string
+        - name: subset
+          in: query
+          description: The required subset
+          required: true
+          enum:
+            - citations
+            - collaborations
+            - disciplines
+            - events
+            - funders
+            - journals
+            - oa-metrics
+            - output-types
+            - publishers
+          type: string
+        - name: index_date
+          in: query
+          description: Index date, defaults to latest
+          required: false
+          format: date
+          type: string
+          pattern: '^\d{4}\d{2}\d{2}$'
+        - name: from
+          in: query
+          description: Start date (included), format YYYY
+          required: false
+          type: string
+          pattern: '^\d{4}$'
+        - name: to
+          in: query
+          description: End date (not included), format YYYY
+          required: false
+          type: string
+          pattern: '^\d{4}$'
+        - name: limit
+          in: query
+          description: Limit number of results (max 10000)
+          required: false
+          type: integer
+          maximum: 10000
+        - name: scroll_id
+          in: query
+          description: The scroll id
+          required: false
+          type: string
+        - name: pit_id
+          in: query
+          description: The PIT id
+          required: false
+          type: string
+        - name: search_after_no
+          in: query
+          description: The search after key
+          required: false
+          type: integer
+        - name: search_after_text
+          in: query
+          description: The search after key
+          required: false
+          type: string
+        {% for param in query_parameters %}
+        - name: {{ param }}
+          in: query
+          type: array
+          items:
+            type: string
+          collectionFormat: multi
+        {% endfor %}
+      responses:
+        '200':
+          description: Successfully return query results (items need to be updated)
+          schema:
+            type: object
+            properties:
+              index:
+                type: string
+                description: The full name of the elasticsearch index that is searched
+              scroll_id:
+                type: string
+                description: The scroll id that can be used to get the next batch of results (only active for 1min)
+              returned_hits:
+                type: integer
+                description: The number of returned hits (can be less than total_hits if a limit is set)
+              total_hits:
+                type: integer
+                description: The number of total hits
+              schema:
+                type: object
+                description: The schema for an individual hit
+              results:
+                type: array
+                description: A list of the actual results (one dictionary per hit)
+        401:
+          $ref: '#/responses/UnauthorizedError'
+      produces:
+        - application/json
+  /v2/query:
+    get:
+      operationId: elastic.searchv2
       tags:
         - Query
       summary: Perform an elasticsearch search query
